<resources>
    <string name="app_name">装色品牌端</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--label-->
    <string name="label_send_way">发送方式 :</string>
    <string name="label_wechat_moment">朋友圈</string>
    <string name="label_qq">QQ</string>
    <string name="label_qzone">QQ空间</string>
    <string name="label_wechat_friend">微信好友</string>
    <string name="label_wechat_collection">微信收藏</string>
    <string name="label_weibo">微博</string>
    <string name="label_message">短信</string>
    <string name="label_email">邮件</string>
    <string name="label_qrcode">二维码</string>
    <string name="label_take_photo">拍照</string>
    <string name="label_select_from_album">从相册选择</string>

    <!--常用-->
    <string name="positive">确定</string>
    <string name="negative">取消</string>
    <string name="search">搜索</string>
    <string name="dialog_content">确定拨打</string>

    <!--相关检测-->
    <string name="no_network_is_detected">检测网络连接失败</string>
    <string name="connect_server_error">连接服务器超时</string>
    <string name="check_setting">检查设置</string>

    <!--相关验证提示-->
    <string name="invalid_code">无效验证码,请输入6位数验证码</string>
    <string name="invalid_citizenID">无效身份证号码</string>
    <string name="invalid_user">无效的手机号</string>
    <string name="invalid_pwd_length">无效密码长度</string>
    <string name="pwd_not_null">密码不能为空</string>
    <string name="pwd_not_match">两次密码不匹配</string>
    <string name="account_not_match">两次卡号不一致</string>
    <string name="invalid_name">无效名字,请输入中文并且保持字数在2到15个字的真实姓名</string>
    <string name="invalid_pwd">无效密码格式,请输入由数字和字母组成的密码</string>
    <string name="invalid_receiver">请填写收货人</string>
    <string name="please_input_shipping_type">请填写配送方式</string>
    <string name="please_input_shipping_num">请填写快递单号</string>
    <string name="please_input_shipping_cost">请填写配送费用</string>
    <string name="please_input_service_code">请输入服务码</string>
    <string name="please_input_old_pwd">请输入旧密码</string>
    <string name="please_input_detail_address">请填写详细地址</string>
    <string name="please_input_zip_code">请填写邮件编码</string>
    <string name="please_check_pwd">请校检密码长度</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="please_re_input_pwd">请重新输入密码</string>
    <string name="invalid_account">无效的卡号</string>
    <string name="invalid_zip_code">无效的邮政编码</string>
    <string name="please_upload_avatar">请上传头像</string>
    <string name="please_upload_citizen_font">请上传身份证正面照</string>
    <string name="please_upload_citizen_back">请上传身份证背面照</string>
    <!--menu-->
    <string name="menu_fav">收藏</string>
    <string name="menu_share">分享</string>

    <!--Title-->
    <string name="title_dial_dialog">拨打</string>

    <!-- popup -->
    <string name="popup_bodadianhau">联系方式</string>
    <string name="popup_erweima">扫一扫</string>
    <string name="popup_pinpaijieshao">品牌介绍</string>
    <string name="popup_mendian">就近门店</string>

    <!-- login activity-->
    <string name="login_activity_brand_detail">品牌建材CRM系统</string>
    <string name="login_activity_btn_login">登录</string>
    <string name="login_activity_btn_visitor">游客浏览</string>
    <string name="login_activity_tv_found_password">忘记密码</string>
    <string name="login_activity_tv_brands_in">品牌入驻</string>
    <string name="login_activity_tv_phone">手机号码：</string>
    <string name="login_activity_tv_password">密码：</string>

    <!-- register activity-->
    <string name="register_activity_top_brand">品牌入驻</string>
    <string name="register_activity_top_register">用户注册</string>
    <string name="register_activity_r_tv_brand_name">品牌名称：</string>
    <string name="register_activity_r_tv_brand_hint">选择品牌</string>
    <string name="register_activity_r_tv_username">用户名称：</string>
    <string name="register_activity_r_tv_shop_name">店铺名称：</string>
    <string name="register_activity_r_tv_address">联系地址：</string>
    <string name="register_activity_r_tv_mobile">手机号码：</string>
    <string name="register_activity_r_tv_check_num">验证码：</string>
    <string name="register_activity_r_tv_password">设置密码：</string>
    <string name="register_activity_r_tv_re_password">确认密码：</string>
    <string name="register_activity_r_btn_message">获取短信</string>
    <string name="register_activity_r_btn_sure">马上注册</string>
    <string name="register_activity_b_tv_brand_name">品牌名称：</string>
    <string name="register_activity_b_tv_contracts">联系人：</string>
    <string name="register_activity_b_tv_mobile">联系电话：</string>
    <string name="register_activity_b_tv_address">联系地址：</string>
    <string name="register_activity_b_btn_into">马上入驻</string>
    <string name="register_activity_tv_must_hint">必填</string>
    <string name="register_activity_tv_option_hint">选填</string>

    <!-- password found activity-->
    <string name="found_activity_tv_top_title">忘记密码</string>
    <string name="found_activity_tv_mobile">手机号码：</string>
    <string name="found_activity_tv_check_num">验证码：</string>
    <string name="found_activity_tv_new_password">新密码：</string>
    <string name="found_activity_tv_new_re_password">确认密码：</string>
    <string name="found_activity_tv_must_hint">必填</string>
    <string name="found_activity_tv_option_hint">选填</string>
    <string name="found_activity_btn_message">获取短信</string>
    <string name="found_activity_btn_upload">提交</string>

    <!-- main activity-->
    <string name="main_activity_bottom_home">首页</string>
    <string name="main_activity_bottom_ablum">产品</string>
    <string name="main_activity_bottom_favourite">专题</string>
    <string name="main_activity_bottom_friends">营销</string>
    <string name="main_activity_bottom_more">更多</string>

    <string name="fragment_album_t_effect">效果图</string>
    <string name="fragment_album_t_product">产品</string>
    <string name="fragment_album_style">风格 ∨</string>
    <string name="fragment_album_space">空间 ∨</string>
    <string name="fragment_album_size">尺寸 ∨</string>
    <string name="fragment_album_cate">分类 ∨</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- more fragment-->
    <string name="more_fragment_person">个人资料</string>
    <string name="more_fragment_change_pwd">修改密码</string>
    <string name="more_fragment_clear_cache">清理缓存</string>
    <string name="more_fragment_use_guide">使用指南</string>
    <string name="more_fragment_share">分享朋友</string>
    <string name="more_fragment_about_us">关于我们</string>
    <string name="more_fragment_service">服务条款</string>
    <string name="more_fragment_private">私隐政策</string>
    <string name="more_fragment_feedback">意见反馈</string>
    <string name="more_fragment_logout">注销</string>

    <string name="more_fragment_item_person_head">头像</string>
    <string name="more_fragment_item_person_name">姓名</string>
    <string name="more_fragment_item_person_shop">店铺名称</string>
    <string name="more_fragment_item_person_are">所在地区</string>
    <string name="more_fragment_item_person_address">详细地址</string>
    <string name="more_fragment_item_person_change_head">更换头像</string>

    <string name="more_fragment_item_chpwd_old">旧密码</string>
    <string name="more_fragment_item_chpwd_new">新密码</string>
    <string name="more_fragment_item_chpwd_renew">确认密码</string>
    <string name="more_fragment_item_btn_upload">提交</string>

    <string name="more_fragment_item_feedback_hint">请在这里填写宝贵意见！</string>

    <!-- friends fragment-->
    <string name="friends_fragment_crm">CRM</string>
    <string name="friends_fragment_client_add_title">添加客户</string>
    <string name="friends_fragment_client_add_name">客户姓名：</string>
    <string name="friends_fragment_client_add_mobile">联系电话：</string>
    <string name="friends_fragment_client_add_province">所在省市：</string>
    <string name="friends_fragment_client_add_address">联系地址：</string>
    <string name="friends_fragment_client_add_must_hint">必填</string>
    <string name="friends_fragment_client_add_option_hint">选填</string>
    <string name="friends_fragment_client_add_btn_upload">提交</string>

    <!--product activity-->
    <string name="product_effect">效\n果\n图</string>
    <string name="product_effect_detail">查看详情</string>

    <!--comm-->
    <string name="tag_value"></string>

</resources>
