<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data class=".FragmentFriendAddClientBinding"></data>
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <include
                android:id="@+id/include_top_title"
                layout="@layout/title_bar"></include>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/bg_white_bottom_line">
                <TextView
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friends_fragment_client_add_name"
                    />
                <EditText
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/friends_fragment_client_add_must_hint"
                    android:textColorHint="@color/hint_text_color_red"
                    android:gravity="right|center_vertical"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/bg_white_bottom_line">
                <TextView
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friends_fragment_client_add_mobile"
                    />
                <EditText
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/friends_fragment_client_add_must_hint"
                    android:textColorHint="@color/hint_text_color_red"
                    android:gravity="right|center_vertical"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/bg_white_bottom_line">
                <TextView
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friends_fragment_client_add_province"
                    />
                <EditText
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/friends_fragment_client_add_option_hint"
                    android:gravity="right|center_vertical"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/bg_white_bottom_line">
                <TextView
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friends_fragment_client_add_address"
                    />
                <EditText
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/friends_fragment_client_add_option_hint"
                    android:gravity="right|center_vertical"
                    />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/button_friend_add_client"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:textSize="19sp"

                android:text="@string/friends_fragment_client_add_btn_upload"/>
        </LinearLayout>
    </FrameLayout>

</layout>