<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data class=".FragmentMoreEditPersonBinding">
        <variable
            name="item"
            type="com.appbaba.iz.entity.Login.AuthBean.InfoEntity"></variable>
    </data>
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_gray">



        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <include
                android:id="@+id/include_top_title"
                layout="@layout/title_bar"></include>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/dv_head"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:placeholderImage="@color/light_gray"
                app:placeholderImageScaleType="fitXY"
                app:roundTopLeft="true"
                app:roundTopRight="true"
                app:roundBottomLeft="true"
                app:roundBottomRight="true"
                app:roundedCornerRadius="8dp"
                />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_change"
                        android:background="@drawable/button"
                        android:layout_marginLeft="50dp"
                        android:text="@string/more_fragment_item_person_change_head"/>
                </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_fragment_item_person_name"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@{item.nickname}"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:padding="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_fragment_item_person_shop"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/edt_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@{item.shop_name}"
                android:gravity="left"
                android:layout_marginTop="10dp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_fragment_item_person_are"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/tv_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@{item.area_desc}"
                android:gravity="left"
                android:layout_marginTop="10dp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_fragment_item_person_address"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@{item.address}"
                android:lines="3"
                android:gravity="top|left"
                android:layout_marginTop="10dp"
                android:padding="10dp"/>
                <Button
                    android:id="@+id/btn_upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:background="@drawable/register_aty_r_btn_r_bg"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="19sp"
                    android:layout_marginTop="20dp"
                    android:text="@string/found_activity_btn_upload"/>
        </LinearLayout>

            </ScrollView>
        </LinearLayout>

    </FrameLayout>
</layout>
