<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data class=".ActivityFoundPwdBinding"></data>
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include_top_title"
            layout="@layout/title_bar"></include>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/line_gray">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/bg_white_bottom_line">
                    <TextView
                        android:id="@+id/tv_1"
                        style="@style/textStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:text="@string/found_activity_tv_mobile"
                        />
                    <EditText
                        android:id="@+id/edt_found_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@+id/tv_1"
                        android:inputType="phone"
                        android:background="@color/transparent"
                        android:layout_toLeftOf="@+id/tv_msg"
                        />
                    <TextView
                        android:id="@+id/tv_msg"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:textSize="14sp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/white"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/register_aty_btn_msg_selector"
                        android:text="@string/found_activity_btn_message"/>
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/bg_white_bottom_line">
                    <TextView
                        style="@style/textStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/found_activity_tv_check_num"
                        />
                    <EditText
                        android:id="@+id/edt_found_code"
                        style="@style/editTextStyle1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="10dp"
                        android:inputType="number"
                        android:drawableRight="@mipmap/more_arrow_right"
                        android:hint="@string/found_activity_tv_must_hint"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/bg_white_bottom_line">
                    <TextView
                        style="@style/textStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/found_activity_tv_new_password"
                        />
                    <EditText
                        android:id="@+id/edt_found_new_password"
                        style="@style/editTextStyle1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="10dp"
                        android:inputType="textPassword"
                        android:drawableRight="@mipmap/more_arrow_right"
                        android:hint="@string/found_activity_tv_must_hint"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/bg_white_bottom_line">
                    <TextView
                        style="@style/textStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/found_activity_tv_new_re_password"
                        />
                    <EditText
                        android:id="@+id/edt_found_re_password"
                        style="@style/editTextStyle1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="10dp"
                        android:inputType="textPassword"
                        android:drawableRight="@mipmap/more_arrow_right"
                        android:hint="@string/found_activity_tv_must_hint"
                        />
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/btn_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/register_aty_r_btn_r_bg"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="19sp"
                android:text="@string/found_activity_btn_upload"/>
        </LinearLayout>

    </LinearLayout>
    </FrameLayout>
</layout>