<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data class=".FragmentMoreChangeBinding"></data>
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_gray">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <include
                android:id="@+id/include_top_title"
                layout="@layout/title_bar"></include>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_white_bottom_line">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_fragment_item_chpwd_old"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/edt_old_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@color/white"
                    android:layout_marginLeft="30dp"
                    android:gravity="right"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_white_bottom_line">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_fragment_item_chpwd_new"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/edt_new_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_marginLeft="30dp"
                    android:background="@color/white"
                    android:gravity="right"
                   />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_white_bottom_line">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_fragment_item_chpwd_renew"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/edt_re_new_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_marginLeft="30dp"
                    android:background="@color/white"
                    android:gravity="right"
                  />
            </LinearLayout>
            <Button
                android:id="@+id/btn_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/more_fragment_button_upload_normal"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/more_fragment_item_btn_upload"/>
        </LinearLayout>

    </FrameLayout>
</layout>